# rtxterm

./: LICENSE  README.md  package-lock.json  package.json  ssh.rs  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypt.rs  download.rs  lib.rs  main.rs  proxy.rs  server.rs  ssh.rs  upload.rs
src/components/: AddServer.vue  EditServer.vue  FileTransfer.vue  Settings.vue  Terminal.vue
src/router/: index.ts
src/utils/: emitter.ts  server.ts  ssh.ts
src/views/: Login.vue  Main.vue
