[package]
name = "rtxterm"
version = "0.6.8"
description = "Rust Tauri Xterm"
authors = ["tsxiaofang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rtxterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-ssh2-lite = { version = "0.5", features = ["tokio", "openssl-on-win32"] }
#base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tauri-plugin-window-state = "2"
tauri-plugin-clipboard-manager = "2"
md5 = "0.7"
openssl = { version = "0.10" }
rand = "0.8"
crc32fast = "1.4"
futures-util = "0.3"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
